# trade-agent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  .roomodes  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DVC_SETUP.md  Dockerfile  LEGACY_CLEANUP.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  commitlint.config.cjs  docker-compose.yml  experiments.db  extract_validation.py  implementation_plan.md  main.py  package-lock.json  package.json  pyproject.toml  run_analysis.py  run_api.py  sample_data.csv  sitecustomize.py  symbol_validation_cache.json  symbol_validation_report.txt  test_data_api.py  test_upload.py  test_validation_report.json  test_yfinance.py  training_pipeline_diagram.md  validation_report.json  version.py
.devcontainer/: devcontainer.json
agents/: __init__.py  base.py  hybrid_policy.py  ppo_rllib.py  sac_sb3.py  toy_env.py
backend/: main.py
conf/: README.md  config.yaml  enhanced_config.yaml
configs/: cnn_lstm_config.json  garch_config.json  linear_config.json  mlp_config.json  ppo_config.json  replay_ppo_config.json  replay_ridge_config.json  replay_sac_config.json  ridge_config.json  sac_config.json  transformer_config.json
data/: README.md  fe.parquet  features.parquet  features_schema.json  large_fe.parquet  large_sample_data.parquet  registry.db  replay_features.parquet  sample_data.csv  sample_data.parquet
docs/: ARCHITECTURE.md  COLUMN_CONSISTENCY_SOLUTION.md  CONTRIBUTING.md  DVC_SETUP.md  FEATURE_FLAGS.md  Makefile  PREMIUM_BOUNDARY.md  README.md  RFC_TEMPLATE.md  UNIFIED_DATA_ENGINE.md  UNIFIED_FRAMEWORK_README.md  acceptance_tests.md  architecture.md  architecture_summary.md  dag_representation.md  data_pipeline_dag.md  data_processing_workflows.md  dependency_update_plan.md  migration_status.md  orchestrator_integration_analysis.py  orchestrator_usage_guide.md  ray_parallelization_plan.md  rollback_plan.md  schema_validation_framework.md  symbol_validation_framework.md  system_overview.md  task_list.md
engine/: nodes.py
examples/: unified_framework_demo.py
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  next.config.mjs  package-lock.json  package.json  simple-react-test.html  simple-test.html  tailwind.config.ts  test-react.html  test.html  tsconfig.json  vite.config.js
logs/: README.md
models/: .gitkeep  README.md  last_results.json  sl_model_cnn_lstm_20250811_170124.pkl  sl_model_cnn_lstm_20250811_170124_metadata.json  sl_model_cnn_lstm_20250811_170242.pkl  sl_model_cnn_lstm_20250811_170242_metadata.json  sl_model_cnn_lstm_20250811_170425.pkl  sl_model_cnn_lstm_20250811_170425_metadata.json  sl_model_garch_20250811_164409.pkl  sl_model_garch_20250811_164409_metadata.json  sl_model_garch_20250811_170422_metadata.json  sl_model_linear_20250811_164352.pkl  sl_model_linear_20250811_164352_metadata.json  sl_model_linear_20250811_170422.pkl  sl_model_linear_20250811_170422_metadata.json  sl_model_mlp_20250811_165119.pkl  sl_model_mlp_20250811_165119_metadata.json  sl_model_mlp_20250811_165441.pkl  sl_model_mlp_20250811_165441_metadata.json  sl_model_mlp_20250811_165525.pkl  sl_model_mlp_20250811_165525_metadata.json  sl_model_mlp_20250811_170424.pkl  sl_model_mlp_20250811_170424_metadata.json  sl_model_ridge_20250811_164323.pkl  sl_model_ridge_20250811_164323_metadata.json  sl_model_ridge_20250811_170422.pkl  sl_model_ridge_20250811_170422_metadata.json  sl_model_ridge_20250815_024944_metadata.json  sl_model_ridge_20250815_024953.pkl  sl_model_ridge_20250815_024953_metadata.json  sl_model_ridge_20250821_022825_metadata.json  sl_model_ridge_20250821_022919_metadata.json  sl_model_ridge_20250821_023138_metadata.json  sl_model_ridge_20250823_170113_metadata.json  sl_model_ridge_20250823_170151_metadata.json  sl_model_ridge_20250823_170256.pkl  sl_model_ridge_20250823_170256_metadata.json  sl_model_ridge_20250823_180201.pkl  sl_model_ridge_20250823_180201_metadata.json  (+5 more)
premium/: README.md
reports/: README.md  backtest_report.html  best_hyperparams_evaluation_20250813_144459.json  best_hyperparams_evaluation_20250813_170356.json  best_hyperparams_report_20250813_144459.html  best_hyperparams_report_20250813_170356.html  best_hyperparams_signals_20250813_144459.csv  best_hyperparams_signals_20250813_170356.csv  best_hyperparams_summary_20250813_144459.json  best_hyperparams_summary_20250813_170356.json  ensemble_recommendation_summary.md  ensemble_vs_individual_backtest.json  equity_backtest_results.csv  equity_best_hyperparams_backtest_20250813_144459.csv  equity_best_hyperparams_backtest_20250813_170356.csv  evaluations.npz  metrics_backtest_results.csv  metrics_best_hyperparams_backtest_20250813_144459.csv  metrics_best_hyperparams_backtest_20250813_170356.csv  ppo_evaluation_analysis.md  ppo_evaluation_metrics.json  ppo_training_metadata.json  reward_params_best_params.json  reward_params_tuning_20250813_031628_study.pkl  ridge_best_params.json  ridge_tuning_20250813_023548_study.pkl  ridge_tuning_20250813_031656_study.pkl  sac_evaluation_metrics.json  sac_policy_comparison.json  trades_backtest_results.csv  (+1 more)
scripts/: bump_version.py  (+37 more)
(+689 files in other folders)
